Fix print layout to hide all form elements above invoice
Extended the print media query to hide additional elements (h1, form groups, buttons, and paragraphs) that were appearing above the invoice title in printouts. Ensures only the invoice preview is displayed when printing.

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 padding: 0;
             }
 
-            .form-grid, .button-group, h2, .client-select, .invoice-items, .totals {
+            h1, h2, .form-grid, .form-group, .button-group, .client-select, .invoice-items, .totals, button, p {
                 display: none !important;
             }
 
