--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 padding: 0;
             }
 
-            h1, h2, .form-grid, .form-group, .button-group, .client-select, .invoice-items, .totals, button, p {
+            h1, h2, .form-grid, .form-group, .button-group, .client-select, .invoice-items, .totals, .gst-option, button, p {
                 display: none !important;
             }
 
@@ -425,7 +425,7 @@
         <button onclick="addInvoiceItem()">+ Add Item</button>
 
         <!-- GST Option -->
-        <div style="margin: 20px 0; padding: 15px; background: #f8f9fa; border-radius: 4px;">
+        <div class="gst-option" style="margin: 20px 0; padding: 15px; background: #f8f9fa; border-radius: 4px;">
             <label style="display: flex; align-items: center; cursor: pointer;">
                 <input type="checkbox" id="includeGST" onchange="saveGSTPreference(); calculateTotals();" checked style="margin-right: 10px; width: 18px; height: 18px; cursor: pointer;">
                 <span style="font-weight: 600;">Include GST (15%)</span>
